# GR-0X

./: .gitignore  README.md
jetson/led_controller/: led_commander.py
polarfire/can_nodes/control_node/: README.md  example_01_ping.py  example_02_hold_position.py  example_03_sine_motion.py  robstride_spidev.py  test_motor.py
polarfire/led_nodes/: pyproject.toml  setup.cfg
polarfire/led_nodes/led_nodes/: led_controller.py
src/growbot_base/: CMakeLists.txt  package.xml
src/growbot_base/config/: bridge.yaml  controller.yaml
src/growbot_base/launch/: common.py  gazebo.launch.xml  growbot_both.launch.py  growbot_hw.launch.py  growbot_sim.launch.py
src/growbot_base/meshes/: Center.STL  Feet_L.STL  Feet_R.STL  Foot_Left.STL  Foot_Right.STL  Fourbar_L.STL  Fourbar_R.STL  Hip_Pitch_L.STL  Hip_Pitch_R.STL  Hip_Pitch_Right.STL  Hip_base.STL  Hip_pitch_left.STL  Knee_Tendon_Left.STL  Knee_Tendon_Motor_Left.STL  Knee_Tendon_Motor_Right.STL  Knee_Tendon_Right.STL  LowerLeg_Bottom_L.STL  LowerLeg_Bottom_R.STL  LowerLeg_Top_L.STL  LowerLeg_Top_R.STL  Lower_Calf_Left.STL  Lower_Calf_Right.STL  Lower_Thigh_Left.STL  Lower_Thigh_right.STL  Tendon_Lower_Left.STL  Tendon_Lower_Right.STL  Tendon_Upper_Left.STL  Tendon_Upper_Right.STL  UpperLeg_Bottom_L.STL  UpperLeg_Bottom_R.STL  UpperLeg_Top_L.STL  UpperLeg_Top_R.STL
src/growbot_base/src/: basic.cpp
src/growbot_base/urdf/: growbot-HD.csv  growbot-HD.urdf  growbot.csv  growbot.urdf.xacro
src/growbot_controllers/: CMakeLists.txt  package.xml
src/growbot_hardware/: CMakeLists.txt  README.md  growbot_hardware.xml  package.xml
src/growbot_hardware/src/: hardware_example.cpp  main.cpp  robstride_control.cpp
